STAVBAU-V2-CORE-1.0.0.1