@@ -6,7 +6,6 @@ import jakarta.persistence.criteria.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.jpa.domain.Specification;
 
-import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
@@ -14,96 +13,82 @@ import java.util.UUID;
 
 @RequiredArgsConstructor
 public class ProjectSpecification implements Specification<Project> {
-
     private final UUID companyId;
-    private final ProjectFilter filter;
-    private final Locale locale; // ✅ přidáno – preferovaný jazyk pro překlady (MVP)
+    private final ProjectFilter f;
 
     @Override
-    public Predicate toPredicate(Root<Project> root, CriteriaQuery<?> cq, CriteriaBuilder cb) {
-        // ✅ kvůli LEFT JOIN (translations) a možnému ORDER BY nad překlady
-        //    zabráníme duplicitám
-        cq.distinct(true);
+    public Predicate toPredicate(Root<Project> root, CriteriaQuery<?> q, CriteriaBuilder cb) {
+        List<Predicate> P = new ArrayList<>();
 
-        List<Predicate> and = new ArrayList<>();
+        // --- Tenant guard ---
+        P.add(cb.equal(root.get("companyId"), companyId));
 
-        // Company scope
-        and.add(cb.equal(root.get("companyId"), companyId));
+        // --- Helpers pro normalizaci výrazu na sloupcích ---
+        // unaccent_immutable(lower(column)) – aby se trefil výrazový GIN index s gin_trgm_ops
+        Expression<String> normName = unaccentLower(cb, root.get("name"));
+        Expression<String> normCode = cb.lower(root.get("code")); // obvykle bez diakritiky
+        // Pokud chceš i code diakritika-insensitive, nahraď na:
+        // Expression<String> normCode = unaccentLower(cb, root.get("code"));
 
-        // ✅ JOIN na překlady názvů (kolekce "translations" s polem "name" a "language")
-        //    Pokud se entita/atribut jmenuje jinak, uprav názvy níže.
-        //Join<Object, Object> tr = root.join("translations", JoinType.LEFT);
+        // --- Fulltext q → name, code ---
+        if (hasText(f.getQ())) {
+            String likeParam = "%" + f.getQ().trim().toLowerCase(Locale.ROOT) + "%";
 
-        // Jednoduché filtry (beze změn)
-        if (notBlank(filter.getCode())) {
-            and.add(ilike(cb, root.get("code"), filter.getCode()));
-        }
-        if (filter.getStatus() != null) {
-            and.add(cb.equal(root.get("status"), filter.getStatus()));
-        }
-        if (filter.getCustomerId() != null) {
-            and.add(cb.equal(root.get("customerId"), filter.getCustomerId()));
-        }
-        if (filter.getProjectManagerId() != null) {
-            and.add(cb.equal(root.get("projectManagerId"), filter.getProjectManagerId()));
-        }
+            // Vzor normalizujeme stejně jako sloupec, aby LIKE odpovídal indexu i diakritice
+            Expression<String> likeNameParam = unaccentLower(cb, cb.literal(likeParam));
+            Expression<String> likeCodeParam = cb.lower(cb.literal(likeParam));
+            // Pokud jsi dal unaccent i na code, použij:
+            // Expression<String> likeCodeParam = unaccentLower(cb, cb.literal(likeParam));
 
-        // Aktivita/archiv
-        if (filter.getActive() != null) {
-            if (filter.getActive()) {
-                and.add(cb.isNull(root.get("archivedAt")));
-            } else {
-                and.add(cb.isNotNull(root.get("archivedAt")));
-            }
+            P.add(cb.or(
+                    cb.like(normName, likeNameParam),
+                    cb.like(normCode, likeCodeParam)
+            ));
         }
 
-        // Rozsahy plánovaných dat
-        range(and, cb, root.get("plannedStartDate"), filter.getPlannedStartFrom(), filter.getPlannedStartTo());
-        range(and, cb, root.get("plannedEndDate"),   filter.getPlannedEndFrom(),   filter.getPlannedEndTo());
-
-        // ✅ Preferovaný jazyk pro překlad (MVP tolerantní: akceptujeme i NULL/odlišný jazyk)
-        //String lang = (locale != null ? locale.getLanguage() : "cs");
-        //and.add(cb.or(
-        //        cb.isNull(tr.get("language")),
-        //        cb.equal(cb.lower(tr.get("language")), lang.toLowerCase(Locale.ROOT))
-        //));
-        // ✅ Oprava názvu pole: používáme 'locale' (např. 'cs' nebo 'cs-CZ') místo 'language'
-        //    Pro MVP zatím NEFILTRUJEME dle locale, jen držíme LEFT JOIN kvůli sortu "name".
-        //    (Chceme vracet všechny projekty bez ohledu na existenci/locale překladu.)
-        //    Pokud chcete jemně preferovat aktuální locale později, přidáme prefix-match:
-        //    cb.like(cb.lower(tr.get("locale")), (locale != null ? locale.getLanguage().toLowerCase() : "cs") + "%")
-
-
-        // Fulltext q → tokeny AND; uvnitř OR rozšířeno o translations.name
-        for (String term : tokenize(filter.getQ(), 6)) {
-            String like = "%" + term.toLowerCase(Locale.ROOT) + "%";
-            Predicate or = cb.or(
-                    cb.like(cb.lower(root.get("code")), like)
-                   // cb.like(cb.lower(tr.get("name")), like) // ✅ přidáno
-            );
-            and.add(or);
+        // --- Jednoduché filtry ---
+        if (hasText(f.getCode())) {
+            String codeLike = "%" + f.getCode().trim().toLowerCase(Locale.ROOT) + "%";
+            P.add(cb.like(normCode, cb.lower(cb.literal(codeLike))));
+            // Pokud máš unaccent na code:
+            // P.add(cb.like(normCode, unaccentLower(cb, cb.literal(codeLike))));
         }
 
-        return cb.and(and.toArray(new Predicate[0]));
+        if (f.getStatus() != null) P.add(cb.equal(root.get("status"), f.getStatus()));
+        if (f.getType() != null)   P.add(cb.equal(root.get("type"), f.getType()));
+
+        if (f.getCustomerId() != null)       P.add(cb.equal(root.get("customerId"), f.getCustomerId()));
+        if (f.getProjectManagerId() != null) P.add(cb.equal(root.get("projectManagerId"), f.getProjectManagerId()));
+
+        // active: true → pouze nearchivované, false → pouze archivované
+        if (f.getActive() != null) {
+            if (Boolean.TRUE.equals(f.getActive())) P.add(cb.isNull(root.get("archivedAt")));
+            else                                    P.add(cb.isNotNull(root.get("archivedAt")));
+        }
+
+        // --- Date ranges ---
+        if (f.getPlannedStartFrom() != null) P.add(cb.greaterThanOrEqualTo(root.get("plannedStartDate"), f.getPlannedStartFrom()));
+        if (f.getPlannedStartTo()   != null) P.add(cb.lessThanOrEqualTo(root.get("plannedStartDate"),   f.getPlannedStartTo()));
+        if (f.getPlannedEndFrom()   != null) P.add(cb.greaterThanOrEqualTo(root.get("plannedEndDate"),   f.getPlannedEndFrom()));
+        if (f.getPlannedEndTo()     != null) P.add(cb.lessThanOrEqualTo(root.get("plannedEndDate"),     f.getPlannedEndTo()));
+
+        // --- Value ranges ---
+        if (f.getMinContractValueNet() != null) {
+            P.add(cb.greaterThanOrEqualTo(root.get("contractValueNet"), f.getMinContractValueNet()));
+        }
+        if (f.getMaxContractValueNet() != null) {
+            P.add(cb.lessThanOrEqualTo(root.get("contractValueNet"), f.getMaxContractValueNet()));
+        }
+
+        return cb.and(P.toArray(new Predicate[0]));
     }
 
-    private static void range(List<Predicate> and, CriteriaBuilder cb, Path<LocalDate> path, LocalDate from, LocalDate to) {
-        if (from != null) and.add(cb.greaterThanOrEqualTo(path, from));
-        if (to != null)   and.add(cb.lessThanOrEqualTo(path, to));
+    /** unaccent_immutable(lower(expr)) */
+    private Expression<String> unaccentLower(CriteriaBuilder cb, Expression<String> expr) {
+        return cb.function("public.unaccent_immutable", String.class, cb.lower(expr));
     }
 
-    private static boolean notBlank(String s) { return s != null && !s.isBlank(); }
-
-    private static Predicate ilike(CriteriaBuilder cb, Path<String> path, String term) {
-        String like = "%" + term.trim().toLowerCase(Locale.ROOT) + "%";
-        return cb.like(cb.lower(path), like);
-    }
-
-    private static String[] tokenize(String q, int max) {
-        if (q == null || q.isBlank()) return new String[0];
-        return java.util.Arrays.stream(q.trim().split("\\s+"))
-                .filter(w -> !w.isBlank())
-                .limit(Math.max(1, max))
-                .toArray(String[]::new);
+    private boolean hasText(String s) {
+        return s != null && !s.trim().isEmpty();
     }
 }
